--- a/.lh/.gitignore.json
+++ b/.lh/.gitignore.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 1,
+            "activePatchIndex": 3,
             "patches": [
                 {
                     "date": 1653909755845,
@@ -12,6 +12,14 @@
                 {
                     "date": 1653909948333,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,1 +1,1 @@\n-/code/指标计算.py\n\\ No newline at end of file\n+/code/get_data.py\n\\ No newline at end of file\n"
+                },
+                {
+                    "date": 1653989664084,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,1 +1,2 @@\n-/code/get_data.py\n\\ No newline at end of file\n+/code/get_data.py\r\n+/data\n\\ No newline at end of file\n"
+                },
+                {
+                    "date": 1653989669785,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,2 +1,1 @@\n /code/get_data.py\r\n-/data\n\\ No newline at end of file\n"
                 }
             ],
             "date": 1653909755845,
